; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lshutdown.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-socket.c_lshutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lshutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lshutdown(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.skynet_context*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @luaL_checkinteger(i32* %5, i32 1)
  store i32 %6, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @lua_upvalueindex(i32 1)
  %9 = call %struct.skynet_context* @lua_touserdata(i32* %7, i32 %8)
  store %struct.skynet_context* %9, %struct.skynet_context** %4, align 8
  %10 = load %struct.skynet_context*, %struct.skynet_context** %4, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @skynet_socket_shutdown(%struct.skynet_context* %10, i32 %11)
  ret i32 0
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local %struct.skynet_context* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_upvalueindex(i32) #1

declare dso_local i32 @skynet_socket_shutdown(%struct.skynet_context*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
